--- a/04_ODEs/04_ODEs.tex
+++ b/04_ODEs/04_ODEs.tex
@@ -580,7 +580,7 @@ Dividiamo la dimostrazione del teorema in tre passi.
 	$$
 	Essendo $X$ chiuso in $\left( C^0(I_0),\,\mathrm{d}_{\infty} \right)$, $x \in X$. Definiamo l'applicazione
 	$$
-	X \ni y \longmapsto T(y)(t) \doteqdot x_0 + \int_{t_0}^t f(s,\,x(s))\mathrm{d}s, \qquad t \in I_0
+	X \ni y \longmapsto T(y)(t) \doteqdot x_0 + \int_{t_0}^t f(s,\,y(s))\mathrm{d}s, \qquad t \in I_0
 	$$
 	Proviamo che:
 	\begin{enumerate}[labelindent=\parindent,leftmargin=*,label=\textnormal{(\arabic*)},start=1]
@@ -614,7 +614,7 @@ Dividiamo la dimostrazione del teorema in tre passi.
 	Quindi, possiamo scrivere
 	$$
 	\left| \int_{t_0}^t \left| f(s,\,y(s)) \right| \mathrm{d}s \right| \leq
-	M|t-t_0| \leq M\delta_0 \leq M\delta_1
+	M|t-t_0| \leq M\delta_0 \leq M\sigma_1
 	$$
 	Dunque, vale che
 	$$
