--- a/04_ODEs/04_ODEs.tex
+++ b/04_ODEs/04_ODEs.tex
@@ -614,7 +614,7 @@ Dividiamo la dimostrazione del teorema in tre passi.
 	Quindi, possiamo scrivere
 	$$
 	\left| \int_{t_0}^t \left| f(s,\,y(s)) \right| \mathrm{d}s \right| \leq
-	M|t-t_0| \leq M\delta_0 \leq M\sigma_1
+	M|t-t_0| \leq M\delta_0 \leq \sigma_1
 	$$
 	Dunque, vale che
 	$$
