--- a/01_calcolo_in_piu_variabili/01_calcolo_in_piu_variabili.tex
+++ b/01_calcolo_in_piu_variabili/01_calcolo_in_piu_variabili.tex
@@ -539,7 +539,7 @@ Sia $A \subseteq \mathbb{R}^2$ aperto, $f:A \longrightarrow \mathbb{R}$, $P_0=(x
 \input{./01_calcolo_in_piu_variabili/figures/diff_3d.pdf_tex}
 \end{center}
 
-\underline{Problema}: Nozione di punto tangente alla superficie $G_f$ (che è una sorta di ``cupola 3D'' che rappresenta il grafico di f) nel punto $(x_0,\,y_0,\,f(x_0,\,y_0))$.
+\underline{Problema}: Nozione di piano tangente alla superficie $G_f$ (che è una sorta di ``cupola 3D'' che rappresenta il grafico di f) nel punto $(x_0,\,y_0,\,f(x_0,\,y_0))$.
 
 Supponiamo che $\pi$ sia un piano di $\mathbb{R}^3$ non ``verticale'', cioè non parallelo ai piani $xz$ e $zy$ (dove $z=f(x,\,y)$).
 Scriviamo innanzitutto l'equazione di $\pi$. La generica retta passante per $\; (x_0,\,y_0)$ nel piano $xy$ è
@@ -1417,7 +1417,7 @@ $$
 \underline{0}_{\mathbb{R}^k} & y = y_0
 \end{cases}
 $$
-Da $(4)$, segue che $\displaystyle \exists \lim_{y \rightarrow y_0} ||\rho(y)||_k = 0$. Osserviamo ora che
+Da $(4)$, segue che $\displaystyle \exists \lim_{y \rightarrow y_0} ||\rho^*(y)||_k = 0$. Osserviamo ora che
 \begin{enumerate}[labelindent=\parindent,leftmargin=*,label=\textnormal{(\arabic*)},start=8]
 \item $\displaystyle \frac{||\rho(g(x))||_k}{||x-x_0||_n} =
 ||\rho^*(g(x))||_k \cdot \frac{||g(x)-g(x_0)||_m}{||x-x_0||_n} \qquad \forall \, x \in A \setminus \lbrace x_0 \rbrace
