--- a/02_massimi_e_minimi/02_massimi_e_minimi.tex
+++ b/02_massimi_e_minimi/02_massimi_e_minimi.tex
@@ -472,7 +472,7 @@ $$
 $$
 \emph{strettamente crescente}. Consideriamo la successione
 $$
-P_{\sigma(h)} = \left( x_{\sigma(h)},\,x_{\sigma(h)} \right)
+P_{\sigma(h)} = \left( x_{\sigma(h)},\,y_{\sigma(h)} \right)
 $$
 estratta dalla successione $(P_h)_h$. Per costruzione, da $\mathrm{(4)}$ e $\mathrm{(5)}$ segue che
 \begin{center}
