--- a/04_ODEs/04_ODEs.tex
+++ b/04_ODEs/04_ODEs.tex
@@ -290,7 +290,7 @@ Scegliendo $h^* = \overline{h}+1$, dalla continuità di $f_{h^*}$ in $t_0$ segue
 $\mathrm{(8)}$
 \hfill
 $\displaystyle
-|f_{h^*}(t)-f_{t^*}(t_0)| < \varepsilon \qquad \forall \, t \in (t_0-\delta_0,\,t_0+\delta_0) \cap [a,\,b]
+|f_{h^*}(t)-f_{h^*}(t_0)| < \varepsilon \qquad \forall \, t \in (t_0-\delta_0,\,t_0+\delta_0) \cap [a,\,b]
 $
 \hfill \null \\
 \end{center}
@@ -366,7 +366,7 @@ La sua soluzione - ovviamente - non è banale a causa della non linearità.
 Si chiama \emph{soluzione di $\mathrm{(E)}$} una funzione $x = x(t) \in C^n(I)$ dove $I \subseteq \mathbb{R}$ è un \emph{intervallo} tale che
 \begin{enumerate}[labelindent=\parindent,leftmargin=*,label=\textnormal{(S$_\arabic*$)},start=1]
 \item $\left( t,\,x(t),\,x'(t),\ldots,x^{n-1}(t) \right) \in A \qquad \forall t \in I$
-\item $x^{(n)}(t) = f \left( t,\,x(t),\,x'(t),\ldots,x^{n-1}(t) \right) \in A \qquad \forall t \in I$
+\item $x^{(n)}(t) = f \left( t,\,x(t),\,x'(t),\ldots,x^{n-1}(t) \right) \qquad \forall t \in I$
 \end{enumerate}
 Una soluzione di $\mathrm{(E)}$ si dice anche \emph{curva integrale di $\mathrm{(E)}$}.
 \end{definition}
