--- a/02_massimi_e_minimi/02_massimi_e_minimi.tex
+++ b/02_massimi_e_minimi/02_massimi_e_minimi.tex
@@ -392,7 +392,7 @@ dove $P_1$ è punto di massimo assoluto di $f$ su $A$ e $P_2$ punto di minimo re
 \begin{definition}
 Un insieme $A \subset \mathbb{R}^n$ si dice limitato se $\exists R_0 > 0$ tale che
 $$
-A \subset \mathrm{B}(0,\,R_0) \Longleftrightarrow ||P||_n \leq P_0 \qquad \forall \, P \in A
+A \subset \mathrm{B}(0,\,R_0) \Longleftrightarrow ||P||_n \leq R_0 \qquad \forall \, P \in A
 $$
 \end{definition}
 
