--- a/02_massimi_e_minimi/02_massimi_e_minimi.tex
+++ b/02_massimi_e_minimi/02_massimi_e_minimi.tex
@@ -230,7 +230,7 @@ dove $g : [-\delta,\,\delta] \longrightarrow A$ tale che $g(t) = x^0 + tv$, quin
 $$
 F''(0) \geq 0
 $$
-Nella dimostrazione del Teorema di Fermat, avevamo già calcolato che:
+Nella dimostrazione del Teorema di Taylor, avevamo già calcolato che:
 $$
 F^{(k)}(t) = 
 \sum_{i_1=1,\ldots,i_k=1}^2
@@ -761,7 +761,7 @@ Allora
 $$
 h(x_0) = y_0
 \qquad \text{e} \qquad 
-\mathsf{V} \cap \mathrm{B}(P_0,\,x_0) = \lbrace (x,\,h(x) : x \in (x_0 - \delta,\, x_0 + \delta) \rbrace
+\mathsf{V} \cap \mathrm{B}(P_0,\,r_0) = \lbrace (x,\,h(x) : x \in (x_0 - \delta,\, x_0 + \delta) \rbrace
 $$
 \item $h$ è di classe $C^1$ su $(x_0 - \delta,\, x_0 + \delta)$ e
 $$
