--- a/03_teorema_delle_funzioni_implicite/03_teorema_delle_funzioni_implicite.tex
+++ b/03_teorema_delle_funzioni_implicite/03_teorema_delle_funzioni_implicite.tex
@@ -64,7 +64,7 @@ $
 $\mathrm{(2)}$
 \hfill
 $\displaystyle
-\frac{\partial g}{\partial y}(x,\,y) > 0 \qquad \forall \, x,\,y \in \mathbb{R}
+\frac{\partial g}{\partial y}(x,\,y) > 0 \qquad \forall \, (x,\,y) \in R
 $
 \hfill \null \\
 \end{center}
